--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a:visited {
   background-color: var(--color-dark--2);
   border-radius: 5px;
   padding: 1.5rem 2.25rem;
-  margin-bottom: 1.75rem;
+  /* margin-bottom: 1.75rem; */
   cursor: pointer;
 
   display: grid;
@@ -88,14 +88,14 @@ a:visited {
   font-size: 1.7rem;
   font-weight: 600;
   grid-column: 1 / -1;
+  text-align: start;
 }
 .feauture__icons {
   width: 4.8rem;
-  padding-left: 1.2rem;
+  padding-left: 0 1.2rem 0 0;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 1.75rem;
   gap: 1.75rem;
 }
 
@@ -240,4 +240,50 @@ a:visited {
 }
 .cycling-popup .leaflet-popup-content-wrapper {
   border-left: 5px solid var(--color-brand--1);
+}
+
+.get__approval {
+  background-color: var(--color-dark--2);
+  z-index: 100;
+  display: block;
+  position: relative;
+  text-align: center;
+  margin-bottom: 1.75rem;
+  border-radius: 7px;
+}
+
+.hidden {
+  display: none;
+}
+.delete__workout {
+  /* position: absolute; */
+  top: 0;
+  width: 100%;
+  border-left: 5px solid #f03e3e;
+  padding: 0.5rem 0;
+}
+.delete__message {
+  text-align: center;
+  color: var(--color-light--2);
+  font-size: 1.4rem;
+  letter-spacing: 0.7px;
+  font-weight: 600;
+  padding-top: 1rem;
+}
+.btn {
+  padding: 0.6rem 2.4rem;
+  font-size: 1.2rem;
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+  font-weight: 600;
+  margin: 1.2rem;
+  letter-spacing: 1px;
+  color: var(--color-light--2);
+}
+.btn__delete {
+  background-color: #f03e3e;
+}
+.btn__cancel {
+  background-color: var(--color-brand--2);
 }
