--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 
   --color-dark--1: #2d3439;
   --color-dark--2: #42484d;
+  --color-dark-3: #f03e3e;
   --color-light--1: #aaa;
   --color-light--2: #ececec;
   --color-light--3: rgb(214, 222, 224);
@@ -103,7 +104,7 @@ a:visited {
   display: flex;
 }
 .hero__icons {
-  width: 2.4rem;
+  width: 2.2rem;
 }
 .hero__trash {
   color: var(--color-brand--1);
@@ -239,7 +240,7 @@ a:visited {
   border-left: 5px solid var(--color-brand--2);
 }
 .cycling-popup .leaflet-popup-content-wrapper {
-  border-left: 5px solid var(--color-brand--1);
+  border-left: 5px solid var(--color-dark-3);
 }
 
 .get__approval {
@@ -259,7 +260,7 @@ a:visited {
   /* position: absolute; */
   top: 0;
   width: 100%;
-  border-left: 5px solid #f03e3e;
+  border-left: 5px solid var(--color-dark-3);
   padding: 0.5rem 0;
 }
 .delete__message {
@@ -282,8 +283,16 @@ a:visited {
   color: var(--color-light--2);
 }
 .btn__delete {
-  background-color: #f03e3e;
+  background-color: var(--color-dark-3);
 }
 .btn__cancel {
   background-color: var(--color-brand--2);
+}
+.delete__all {
+  background-color: var(--color-dark-3);
+}
+.feauture__container {
+  display: flex;
+  justify-content: end;
+  margin-bottom: 1.2rem;
 }
